<resources>
    <string name="app_name">ConversorDeMoedas</string>
    <string name="conversor_de_moedas">Conversor de moedas</string>
    <string name="digite_o_valor">Digite o valor e escolha as moedas de conversão</string>
    <string name="imagem_da_bandeira_pais">Imagem da Bandeira do País da Moeda</string>
    <string name="_1_000_00">1.000,00</string>
    <string name="oops_houve_uma_falha">Oops... Houve uma falha!</string>
    <string name="n_o_foi_possivel_carregar_a_lista">Não foi possível carregar a lista de tipos monetários.\nVerifique a sua conexão com a internet e tente novamente.</string>
    <string name="tentar_novamente">Tentar novamente</string>
</resources>