<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="24dp"
            android:layout_marginHorizontal="16dp" >

            <TextView
                android:id="@+id/tvContentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conversor_de_moedas"
                android:textAppearance="@style/TextAppearance.Inter.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/digite_o_valor"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.Inter.Small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvContentTitle" />

            <LinearLayout
                android:id="@+id/llFromExchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/bg_rounded_content"
                android:weightSum="7"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
                app:layout_constraintBottom_toTopOf="@+id/ivArrowsExchange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">
                    <TextView
                        android:id="@+id/tvFromCurrencySymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        tools:text="R$"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/etFromExchangeValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:inputType="number"
                        android:importantForAutofill="no"
                        android:text="@string/_1_000_00"
                        android:background="@android:color/transparent" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_divider" />

                <Spinner
                    android:id="@+id/spnFromExchange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_currency_type"
                    android:layout_weight="3" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivArrowsExchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/ic_arrows_exchange"
                app:layout_constraintTop_toBottomOf="@+id/llFromExchange"
                app:layout_constraintBottom_toTopOf="@+id/llToExchange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/llToExchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_rounded_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">
                    <TextView
                        android:id="@+id/tvToCurrencySymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        tools:text="R$"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvToExchangeValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:text="@string/_1_000_00" />
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_divider" />

                <Spinner
                    android:id="@+id/spnToExchange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_currency_type"
                    android:layout_weight="3" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>